updating slides for inna, brooke, and simon

--- a/chervoneva.Rmd
+++ b/chervoneva.Rmd
@@ -26,6 +26,4 @@ theme_set(theme_bw() + theme(legend.position = "bottom"))
 
 ## Slide Deck
 
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/3710e7390c4842afb3f85c22e729ecde" title="MI_fda" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
-
-## Code
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/8b1b853d37dd4b6e8c9d3af52689e646" title="psb_chervoneva" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 420;" data-ratio="1.3333333333333333"></iframe>
